--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Clean Cart Browser Extension | Hide Buy Now Pay Later Ads for Mindful
-      Shopping
-    </title>
+    <title>Clean Cart Browser Extension | Hiding Buy Now Pay Later Ads and Encouraging Mindful Shopping</title>
     <meta
       name="description"
       content="Install the Clean Cart browser extension to hide 'Buy Now, Pay Later' (BNPL) ads and reduce shopping distractions. Available for Chrome, Firefox, and Safari."
@@ -102,7 +99,7 @@
           <p>
             Clean Cart’s <strong>browser extension</strong> automatically hides
             distracting <strong>Buy Now, Pay Later (BNPL)</strong> advertising
-            and promotional messages on thousands of shopping sites. Enjoy a
+            and promotional messages on millions of shopping sites. Enjoy a
             cleaner, less cluttered browsing experience and foster
             <strong>mindful consumption</strong> habits.
           </p>
@@ -142,34 +139,22 @@
       <section id="download" aria-labelledby="download-heading">
         <div class="content">
           <h2 id="download-heading">
-            Seamless integration across thousands<br />of merchant websites
+            Seamless integration across millions<br />of merchant websites
           </h2>
           <p>
             Clean Cart works quietly in the background—no setup required. It
             automatically removes distracting
             <strong>"Buy Now, Pay Later" prompts</strong>
-            across thousands of online stores, letting you focus on what
+            across millions of online stores, letting you focus on what
             matters: price, product, and peace of mind. Installs in seconds for
             Chrome, Firefox, and Safari.
           </p>
           <div class="button-container">
             <a
-              href="[CHROME_STORE_LINK]"
-              title="Download Clean Cart for Google Chrome"
-              class="button button-chrome"
-              >Add to Google Chrome</a
-            >
-            <a
-              href="[FIREFOX_ADDON_LINK]"
-              title="Download Clean Cart for Mozilla Firefox"
-              class="button button-firefox"
-              >Add to Firefox</a
-            >
-            <a
-              href="[SAFARI_EXTENSION_LINK]"
-              title="Download Clean Cart for Apple Safari"
-              class="button button-safari"
-              >Add to Safari</a
+              href="https://chromewebstore.google.com/detail/clean-cart/hlphcmhgkhcgoaipaeejpfidaacndick"
+              title="Add the Clean Cart browser extension to your web browser"
+              class="button"
+              >Add To Your Browser</a
             >
           </div>
         </div>
@@ -217,7 +202,7 @@
             Cart provides value to your online shopping experience, please
             consider
             <a
-              href="[DONATION_LINK]"
+              href="https://www.paypal.com/donate/?business=LFVNGER46AYNU&no_recurring=0&item_name=To+support+the+ongoing+development+of+Clean+Cart+and+its+associated+apps.&currency_code=USD"
               title="Donate to support Clean Cart development"
               >supporting us with a donation</a
             >.
