--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clean Cart Browser Extension | Hiding Buy Now Pay Later Ads and Encouraging Mindful Shopping</title>
+    <title>
+      Clean Cart Browser Extension | Hiding Buy Now Pay Later Ads and
+      Encouraging Mindful Shopping
+    </title>
     <meta
       name="description"
       content="Install the Clean Cart browser extension to hide 'Buy Now, Pay Later' (BNPL) ads and reduce shopping distractions. Available for Chrome, Firefox, and Safari."
@@ -81,13 +84,15 @@
   <body>
     <header role="banner">
       <div>
-        <img
-          class="logo"
-          src="./assets/logo.svg"
-          alt="Clean Cart browser extension logo"
-          width="64"
-          height="64"
-        />
+        <a href="/">
+          <img
+            class="logo"
+            src="./assets/logo.svg"
+            alt="Clean Cart browser extension logo"
+            width="64"
+            height="64"
+          />
+        </a>
         <a class="download-cta" href="#download">Add To Your Browser</a>
       </div>
     </header>
@@ -145,9 +150,9 @@
             Clean Cart works quietly in the background—no setup required. It
             automatically removes distracting
             <strong>"Buy Now, Pay Later" prompts</strong>
-            across millions of online stores, letting you focus on what
-            matters: price, product, and peace of mind. Installs in seconds for
-            Chrome, Firefox, and Safari.
+            across millions of online stores, letting you focus on what matters:
+            price, product, and peace of mind. Installs in seconds for Chrome,
+            Firefox, and Safari.
           </p>
           <div class="button-container">
             <a
