--- a/privacy.html
+++ b/privacy.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Clean Cart Browser Extension | Hiding Buy Now Pay Later Ads and
-      Encouraging Mindful Shopping
+      Clean Cart Browser Extension | Privacy Policy
     </title>
     <meta
       name="description"
@@ -84,13 +83,15 @@
   <body>
     <header role="banner">
       <div>
-        <img
-          class="logo"
-          src="./assets/logo.svg"
-          alt="Clean Cart browser extension logo"
-          width="64"
-          height="64"
-        />
+        <a href="/">
+          <img
+            class="logo"
+            src="./assets/logo.svg"
+            alt="Clean Cart browser extension logo"
+            width="64"
+            height="64"
+          />
+        </a>
         <a class="download-cta" href="/">Add To Your Browser</a>
       </div>
     </header>
