--- a/support.html
+++ b/support.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clean Cart Browser Extension | Privacy Policy</title>
+    <title>
+      Clean Cart Browser Extension | Frequently Asked Questions (FAQs) and Support
+    </title>
     <meta
       name="description"
       content="Install the Clean Cart browser extension to hide 'Buy Now, Pay Later' (BNPL) ads and reduce shopping distractions. Available for Chrome, Firefox, and Safari."
@@ -94,41 +96,33 @@
       </div>
     </header>
     <main rol="main">
-      <section id="privacy" aria-labelledby="privacy-heading">
+      <section id="support" aria-labelledby="support-heading">
         <div class="content">
-          <h1 id="privacy-heading">Privacy Policy</h1>
-          <p>
-            This privacy policy applies to the Clean Cart extension (hereby
-            referred to as "Extension") for mobile devices that was created by
-            Haptic Software (hereby referred to as "Service Provider") as a Free
-            service. This service is intended for use "AS IS".
+          <h1 id="support-heading">Frequently Asked Questions</h1>
+          <p>Here are answers to common questions about the Clean Cart browser extension:</p>
+          <h3>What is the Clean Cart browser extension?</h3>
+          <p>Clean Cart is a free browser extension designed to help you browse online more mindfully by automatically hiding "Buy Now, Pay Later" (BNPL) advertisements and payment options (like Affirm, Klarna, Afterpay, etc.) on websites you visit.</p>
+          <h3>Why block Buy Now, Pay Later ads?</h3>
+          <p>BNPL options can sometimes encourage impulse spending and make it harder to track your true financial picture. Clean Cart aims to reduce these temptations at the source, promoting more conscious purchasing decisions and helping you stick to your financial goals.</p>
+          <h3>How does it work? Does it slow down my browser?</h3>
+          <p>The extension uses efficient methods to identify known BNPL elements on web pages as they load and hides them using standard web technologies. It's designed to be lightweight and should not noticeably impact your browsing speed or performance.</p>
+          <h3>What data does the extension collect? Is it private?</h3>
+          <p>Privacy is fundamental to Clean Cart. Please view our <a href="/privacy.html">Privacy Policy</a> for more information.</p>
+          <h3>What if I see a BNPL ad that wasn't blocked by the extension?</h3>
+          <p>The online landscape changes rapidly! While we work hard to keep our detection lists comprehensive, sometimes new BNPL formats appear or specific site implementations might be missed. If you encounter a BNPL ad that isn't blocked, we'd appreciate it if you let us know via email at <a href="mailto:support@haptic.software">support@haptic.software</a>.</p>
+          <h3>Does the extension block <em>all</em> ads?</h3>
+          <p>No. Clean Cart is specifically designed to target Buy Now, Pay Later advertisements and related payment widgets. It is not intended to be a general-purpose ad blocker for display ads, video ads, etc.
+          <h3>Is the extension free?</h3>
+          <p>Yes, the core BNPL blocking functionality of the Clean Cart browser extension is completely free and will remain free. Advanced features, such as the planned ability to block custom website elements you choose yourself, will be part of the premium "Pro" tier accessible via the mobile app subscription in the future.</p>
+          <h3>Where can I learn more about the upcoming Clean Cart mobile app?</h3>
+          <p>We're excited about the upcoming mobile app! You can visit the <a href="/">homepage</a> to learn more about its features (like local-first privacy and habit tracking) and sign up to be notified when it launches.</p>
           </p>
-          <h3>Information Collection and Use</h3>
+          <h3>Have a question that wasn't answered?</h3>
           <p>
-            The Extension does not collect or store any information about its
-            users.
-          </p>
-          <h3>Changes</h3>
-          <p>
-            This Privacy Policy may be updated from time to time for any reason.
-            The Service Provider will notify you of any changes to the Privacy
-            Policy by updating this page with the new Privacy Policy. You are
-            advised to consult this Privacy Policy regularly for any changes, as
-            continued use is deemed approval of all changes.
-          </p>
-          <p>This privacy policy is effective as of 2025-04-22</p>
-          <h3>Your Consent</h3>
-          <p>
-            By using the Extension, you are consenting to the processing of your
-            information as set forth in this Privacy Policy now and as amended
-            by us.
-          </p>
-          <h3>Contact Us</h3>
-          <p>
-            If you have any questions regarding privacy while using the
-            Extension, or have questions about the practices, please contact the
-            Service Provider via email at
-            <a href="mailto:support@haptic.software">support@haptic.software</a
+            If you have any questions about the extension that weren't answered here, please contact the
+            team via email at
+            <a href="mailto:support@haptic.software"
+              >support@haptic.software</a
             >.
           </p>
         </div>
