make it responsive

--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
     <footer role="contentinfo">
       <div class="content">
         <p>
-          &copy; <span id="copyright-year">2025</span> Clean Cart. A project by
+          &copy; <span id="copyright-year">2025</span>
           <a
-            href="https://tylers.world"
+            href="https://haptic.software"
             target="_blank"
             rel="noopener noreferrer"
-            >Tyler Reckart</a
-          >.
+            >Haptic Software, LLC</a
+          >
         </p>
       </div>
     </footer>
